Dodano możłiwość dodawania ofert

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,9 @@ email_validator
 gunicorn
 psycopg2-binary
 Flask-Login>=0.6.3,<0.7.0
+alembic
+PyMuPDF
+pytesseract
+Pillow
+openpyxl
+python-magic
