--- a/alembic.ini
+++ b/alembic.ini
@@ -5,7 +5,7 @@
 # this is typically a path given in POSIX (e.g. forward slashes)
 # format, relative to the token %(here)s which refers to the location of this
 # ini file
-script_location = migrations
+script_location = %(here)s/migrations
 prepend_sys_path = SubBase
 sqlalchemy.url = %(DB_URL)s
 
