--- a/requirements.txt
+++ b/requirements.txt
@@ -66,8 +66,8 @@ SQLAlchemy==2.0.40
 sympy==1.14.0
 terminaltables==3.1.10
 tifffile==2025.6.11
-torch==2.7.1
-torchvision==0.22.1
+# torch==2.7.1
+# torchvision==0.22.1
 typing_extensions==4.13.2
 Unidecode==1.3.8
 urllib3==2.5.0
