feat: Poprawa UX/UI w nawigacji i na stronie głównej
- Przeniesiono przycisk eksportu firm z paska nawigacyjnego na stronę z listą firm, aby był bardziej intuicyjny.
- Zmieniono link "Przejdź do Analiz" na stronie głównej, aby kierował do Pulpitu Analitycznego.
- Poprawiono efekt hover dla przycisków w trybie ciemnym, zapewniając lepszy kontrast i spójność wizualną.
- Usunięto zbędne elementy interfejsu, takie jak linie podziału w menu.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,7 @@
     "python.pythonPath": "./venv/Scripts/python.exe",
     "python.defaultInterpreterPath": "./venv/Scripts/python.exe",
     "files.associations": {
-        "*.html": "jinja-html"
-    },
-    "emmet.includeLanguages": {
-        "jinja-html": "html"
+        "*.html": "html"
     },
     "javascript.validate.enable": false
 }
